[gd_scene load_steps=9 format=3 uid="uid://b27m30gielx0i"]

[ext_resource type="Script" uid="uid://b5nmieekq048o" path="res://scenes/game_manager.gd" id="1_tefeu"]
[ext_resource type="Script" uid="uid://cinguffmfs4xq" path="res://scripts/state_machine/state_machine.gd" id="2_0wfyh"]
[ext_resource type="Texture2D" uid="uid://dcmcyaagw2u1h" path="res://assets/bg.png" id="2_o6xl0"]
[ext_resource type="Script" uid="uid://em4q435qwdph" path="res://scenes/building_mode.gd" id="3_jyhfs"]
[ext_resource type="Script" uid="uid://13no860i2cxq" path="res://scenes/gameplay.gd" id="3_sugp2"]
[ext_resource type="Script" uid="uid://e8snxkuepi8h" path="res://scenes/grid_root.gd" id="4_jyhfs"]
[ext_resource type="PackedScene" uid="uid://dt0yco5kxgq2a" path="res://scenes/gui.tscn" id="5_tbgi4"]
[ext_resource type="Script" uid="uid://b3dpe3523qide" path="res://scenes/camera_2d.gd" id="8_tipki"]

[node name="Main" type="Node"]
script = ExtResource("1_tefeu")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_0wfyh")
initial_state = NodePath("Gameplay")

[node name="Gameplay" type="Node" parent="StateMachine"]
script = ExtResource("3_sugp2")

[node name="BuildingMode" type="Node" parent="StateMachine" node_paths=PackedStringArray("grid_root")]
script = ExtResource("3_jyhfs")
grid_root = NodePath("../../GridRoot")

[node name="GUI" parent="." instance=ExtResource("5_tbgi4")]

[node name="GridRoot" type="Node2D" parent="."]
script = ExtResource("4_jyhfs")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
script = ExtResource("8_tipki")

[node name="Background" type="Node2D" parent="."]
z_index = -4096
y_sort_enabled = true
position = Vector2(-640, -180)

[node name="Sprite2D" type="Sprite2D" parent="Background"]
texture = ExtResource("2_o6xl0")
centered = false

[node name="Sprite2D2" type="Sprite2D" parent="Background"]
texture = ExtResource("2_o6xl0")
centered = false
offset = Vector2(640, 0)

[node name="Sprite2D3" type="Sprite2D" parent="Background"]
texture = ExtResource("2_o6xl0")
centered = false
offset = Vector2(1280, 0)

[node name="Sprite2D4" type="Sprite2D" parent="Background"]
texture = ExtResource("2_o6xl0")
centered = false
offset = Vector2(0, 360)

[node name="Sprite2D5" type="Sprite2D" parent="Background"]
texture = ExtResource("2_o6xl0")
centered = false
offset = Vector2(640, 360)

[node name="Sprite2D6" type="Sprite2D" parent="Background"]
texture = ExtResource("2_o6xl0")
centered = false
offset = Vector2(1280, 360)

[node name="Sprite2D7" type="Sprite2D" parent="Background"]
texture = ExtResource("2_o6xl0")
centered = false
offset = Vector2(0, 720)

[node name="Sprite2D8" type="Sprite2D" parent="Background"]
texture = ExtResource("2_o6xl0")
centered = false
offset = Vector2(640, 720)

[node name="Sprite2D9" type="Sprite2D" parent="Background"]
texture = ExtResource("2_o6xl0")
centered = false
offset = Vector2(1280, 720)

[connection signal="place_module" from="StateMachine/BuildingMode" to="GridRoot" method="_on_building_mode_place_module"]
